# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt
include/: EditorWindow.hpp
src/: editor.cpp  editor.hpp  main.cpp
